--- a/sred/package.json
+++ b/sred/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2"
